Working on Personal project. Calculations are a little off.

--- a/Expressions_Personal/index.html
+++ b/Expressions_Personal/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 	<head>
-		<title>Personal: Food Tracker</title>
+		<title>Personal: Weight Lifting Tracker</title>
 		<script src="js/script.js">
 		</script>
 	</head>
