--- a/Functions_Personal/index.html
+++ b/Functions_Personal/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE HTML>
 <html>
 <head>
-	<title>Functions: Personal</title>
+	<title>Personal: Omelette Maker</title>
 	<script src="js/script.js"></script>
 </head>
 <body>
