--- a/Functions_Industry/index.html
+++ b/Functions_Industry/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE HTML>
 <html>
 <head>
-	<title>Functions: Industry</title>
+	<title>Industry: Website Tracker</title>
 	<script src="js/script.js"></script>
 </head>
 <body>
