--- a/Functions_Wacky/index.html
+++ b/Functions_Wacky/index.html
@@ -1,8 +1,8 @@
 <DOCTYPE HTML>
 <html>
 <head>
-	<title>Functions: Wacky</title>
-	<script src="js/script.js"></script>
+    <title>Wacky: Rock, Papers, Scissors.</title>
+    <script src="js/script.js"></script>
 </head>
 <body>
 </body>
